Fix release build